--- a/src/app/liquidacion/detalles-liquidacion/detalles-liquidacion.component.html
+++ b/src/app/liquidacion/detalles-liquidacion/detalles-liquidacion.component.html
@@ -4,7 +4,8 @@
         <div style="flex-direction: column;">
             <div class="container">
                 <h1>{{ liquidacion?.concepto }}: desde {{ liquidacion?.fechaDesde | date:'dd/MM/yyyy' }} hasta {{ liquidacion?.fechaHasta | date:'dd/MM/yyyy' }}</h1>
-                <h1>Fecha: {{ liquidacion?.fecha | date:'dd/MM/yyyy' }} - Tipo: {{ liquidacion?.tipo }}</h1>
+                <h1>Fecha: {{ liquidacion?.fecha | date:'dd/MM/yyyy' }}</h1>
+                <h1>Tipo: {{ liquidacion?.tipo }}</h1>
                 <table class="table table-striped">
                     <thead>
                         <tr>
@@ -18,7 +19,7 @@
                             <td>{{ lineaLiquidacion.nombre }} {{ lineaLiquidacion.apellido1 }} {{ lineaLiquidacion.apellido2 }}</td>
                             <td>{{ lineaLiquidacion.importe }}</td>
                             <td *ngIf="lineaLiquidacion.recibida">Recibido</td>
-                            <td *ngIf="!lineaLiquidacion.recibida">
+                            <td *ngIf="!lineaLiquidacion.recibida && lineaLiquidacion.idUsuario === idUsuarioRegistrado">
                                 <button mat-button (click)="recibido(lineaLiquidacion)" style="width: 100px; background-color: #00796b; color: white;">
                                     <mat-icon>check</mat-icon>
                                     <span>Recibido</span>
