--- a/src/app/parcela/crear-parcela/crear-parcela.component.html
+++ b/src/app/parcela/crear-parcela/crear-parcela.component.html
@@ -80,6 +80,6 @@
     </div>     
     <div class="div-buttons">
         <button mat-raised-button class="create-button" (click)="guardar()">Crear</button>
-        <button mat-raised-button class="cancel-button" routerLink="/dashboard/home">Cancelar</button>
+        <button mat-raised-button class="cancel-button" routerLink="/dashboard/detalles-finca">Cancelar</button>
     </div>
 </form>
