--- a/src/app/usuario/listar-usuarios/listar-usuarios.component.html
+++ b/src/app/usuario/listar-usuarios/listar-usuarios.component.html
@@ -3,7 +3,7 @@
     <div class="flex">
         <div style="flex-direction: column;">
             <div class="container">
-                <h1>Usuarios activos</h1>
+                <h1 style="color: #2bea04;">Usuarios activos</h1>
                 <table class="table table-striped">
                     <thead>
                         <tr>
@@ -33,7 +33,7 @@
                 </table>
             </div>
             <div class="container" *ngIf="usuariosBaja.length > 0">
-                <h1 style="margin-top: 20px;">Usuarios inactivos</h1>
+                <h1 style="margin-top: 20px; color: red;">Usuarios inactivos</h1>
                 <table class="table table-striped">
                     <thead>
                         <tr>
