--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -31,7 +31,7 @@
         <span>Acciones</span>
       </button>
       <mat-menu #actions="matMenu">
-        <button mat-menu-item [matMenuTriggerFor]="user">Usuario</button>
+        <button mat-menu-item [matMenuTriggerFor]="user" *ngIf="rol === 'SUPERUSUARIO'">Usuario</button>
         <button mat-menu-item [matMenuTriggerFor]="finca">Finca</button>
         <button mat-menu-item [matMenuTriggerFor]="movimientos">Movimientos</button>
         <button mat-menu-item [matMenuTriggerFor]="liquidaciones">Liquidaciones</button>
@@ -41,16 +41,18 @@
         <button mat-menu-item routerLink="/dashboard/listar-usuarios">Listar usuarios</button>
       </mat-menu>
       <mat-menu #finca="matMenu">
-        <button mat-menu-item routerLink="/dashboard/crear-finca">Crear Finca</button>
+        <button mat-menu-item routerLink="/dashboard/crear-finca" *ngIf="rol === 'SUPERUSUARIO'">Crear Finca</button>
         <button mat-menu-item routerLink="/dashboard/detalles-finca">Ver detalles finca</button>
-        <button mat-menu-item routerLink="/dashboard/crear-parcela">Añadir parcela</button>        
+        <button mat-menu-item routerLink="/dashboard/crear-parcela" *ngIf="rol === 'SUPERUSUARIO' || rol === 'ADMINISTRADOR'">Añadir parcela</button>       
+        <button mat-menu-item routerLink="/dashboard/listar-archivos">Ver archivos</button>   
+        <button mat-menu-item routerLink="/dashboard/listar-fincas">Listar fincas</button>
       </mat-menu>
       <mat-menu #movimientos="matMenu">
         <button mat-menu-item routerLink="/dashboard/crear-movimiento">Añadir movimiento</button>
         <button mat-menu-item routerLink="/dashboard/listar-movimientos">Listar movimientos</button>
       </mat-menu>
       <mat-menu #liquidaciones="matMenu">
-        <button mat-menu-item routerLink="/dashboard/generar-liquidacion">Generar liquidación</button>
+        <button mat-menu-item routerLink="/dashboard/generar-liquidacion" *ngIf="rol === 'SUPERUSUARIO' || rol === 'ADMINISTRADOR'">Generar liquidación</button>
         <button mat-menu-item routerLink="/dashboard/listar-liquidaciones">Listar liquidaciones</button>
       </mat-menu>
       <button mat-button class="menu-button" routerLink="/dashboard/ver-perfil/{{idUsuario}}">
