--- a/src/app/finca/detalles-finca/detalles-finca.component.html
+++ b/src/app/finca/detalles-finca/detalles-finca.component.html
@@ -1,4 +1,5 @@
-<h2>Detalles Finca</h2>
+<h2 *ngIf="finca?.fechaBaja === null">Detalles Finca</h2>
+<h2 *ngIf="finca?.fechaBaja !== null">Detalles Finca Inactiva</h2>
 <form action="#" method="post" class="user-form">
     <div class="flex">
         <div style="flex-direction: column;">
@@ -28,19 +29,25 @@
                 </table>
             </div>
             <div style="display: flex;">
-                <div class="container" *ngIf="parcelas && parcelas.length > 0">
-                    <h1>Parcelas</h1>
-                    <table class="table table-striped">
+                <div class="container" *ngIf="(parcelas && parcelas.length > 0) || ((rol === 'SUPERUSUARIO' || rol === 'ADMINISTRADOR') && finca?.fechaBaja === null)">
+                    <h1 *ngIf="finca?.fechaBaja === null">
+                        Parcelas
+                        <button *ngIf="(rol === 'SUPERUSUARIO' || rol === 'ADMINISTRADOR') && finca?.fechaBaja === null" mat-button routerLink="/dashboard/crear-parcela" style="margin-left: 20px; width: 100px; background-color: #00796b; color: white;">
+                            <mat-icon>add</mat-icon>
+                            <span>Añadir</span>
+                        </button>
+                    </h1>
+                    <table class="table table-striped" *ngIf="(parcelas && parcelas.length > 0)">
                         <thead>
                             <tr>
                                 <th scope="col">Referencia catastral</th>
-                                <th scope="col">Opciones</th>
+                                <th scope="col" *ngIf="(rol === 'SUPERUSUARIO' || rol === 'ADMINISTRADOR') && finca?.fechaBaja === null">Opciones</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr *ngFor="let parcela of parcelas">
                                 <td routerLink="/dashboard/detalles-parcela/{{parcela}}" class="click">{{ parcela }} </td>
-                                <td>
+                                <td *ngIf="rol === 'SUPERUSUARIO' || rol === 'ADMINISTRADOR'">
                                     <button mat-button (click)="darBajaParcela(parcela)" style="width: 100px; background-color: #00796b; color: white; margin-left: 20px">
                                         <mat-icon>delete</mat-icon>
                                         <span>Eliminar</span>
@@ -56,13 +63,13 @@
                         <thead>
                             <tr>
                                 <th scope="col">Referencia catastral</th>
-                                <th scope="col">Opciones</th>
+                                <th scope="col" *ngIf="(rol === 'SUPERUSUARIO' || rol === 'ADMINISTRADOR') && finca?.fechaBaja === null">Opciones</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr *ngFor="let parcela of parcelasBaja">
                                 <td routerLink="/dashboard/detalles-parcela/{{parcela}}" class="click">{{ parcela }} </td>
-                                <td>
+                                <td *ngIf="(rol === 'SUPERUSUARIO' || rol === 'ADMINISTRADOR') && finca?.fechaBaja === null">
                                     <button mat-button (click)="darAltaParcela(parcela)" style="width: 120px; background-color: #00796b; color: white; margin-left: 20px">
                                         <mat-icon>add</mat-icon>
                                         <span>Dar alta</span>
@@ -73,15 +80,15 @@
                     </table>
                 </div>
             </div>                      
-            <div class="container" *ngIf="usuariosFincaInfo && usuariosFincaInfo.length > 0">
-                <h1>
+            <div class="container" >
+                <h1 *ngIf="finca?.fechaBaja === null">
                     Usuarios
-                    <button mat-button routerLink="/dashboard/añadir-usuario" style="margin-left: 20px; width: 100px; background-color: #00796b; color: white;">
+                    <button *ngIf="(rol === 'SUPERUSUARIO' || rol === 'ADMINISTRADOR') && finca?.fechaBaja === null" mat-button routerLink="/dashboard/añadir-usuario" style="margin-left: 20px; width: 100px; background-color: #00796b; color: white;">
                         <mat-icon>add</mat-icon>
                         <span>Añadir</span>
                     </button>
                 </h1>
-                <table class="table table-striped">
+                <table class="table table-striped" *ngIf="usuariosFincaInfo && usuariosFincaInfo.length > 0">
                     <thead>
                         <tr>
                             <th scope="col">Nombre y apellidos</th>
@@ -89,7 +96,7 @@
                             <th scope="col">Rol</th>
                             <th scope="col">Fecha de alta</th>
                             <th scope="col">Fecha de modificación</th>
-                            <th scope="col">Opciones</th>                            
+                            <th scope="col" *ngIf="(rol === 'SUPERUSUARIO' || rol === 'ADMINISTRADOR') && finca?.fechaBaja === null">Opciones</th>                            
                         </tr>
                     </thead>
                     <tbody>
@@ -99,7 +106,7 @@
                             <td>{{ usuarioFincaInfo.rol }}</td>
                             <td>{{ usuarioFincaInfo.fechaAlta | date:'dd/MM/yyyy' }}</td>
                             <td>{{ usuarioFincaInfo.fechaModificacion | date:'dd/MM/yyyy' }}</td>
-                            <td style="display: flex;">
+                            <td style="display: flex;" *ngIf="(rol === 'SUPERUSUARIO' || rol === 'ADMINISTRADOR') && finca?.fechaBaja === null">
                                 <button mat-button routerLink="/dashboard/editar-usuario-finca/{{usuarioFincaInfo.id}}" style="width: 100px; background-color: #00796b; color: white;">
                                     <mat-icon>edit</mat-icon>
                                     <span>Editar</span>
@@ -115,7 +122,7 @@
             </div>
         </div>        
         <div class="div-buttons">
-            <button mat-raised-button class="edit-button" routerLink="/dashboard/editar-finca">Editar</button>
+            <button mat-raised-button class="edit-button" routerLink="/dashboard/editar-finca" *ngIf="(rol === 'SUPERUSUARIO' || rol === 'ADMINISTRADOR') && finca?.fechaBaja === null">Editar</button>
             <button mat-raised-button class="cancel-button" routerLink="/dashboard/home">Volver</button>
         </div>
     </div>   
